# tsz

./: .codex-claim  .codex-worktree-link  .dockerignore  .gcloudignore  .gitattributes  .gitignore  .gitmodules  .tsz_productivity_log.md  AGENTS.md  AGENT_9_SESSION_SUMMARY.md  ARCHITECTURE_IMPROVEMENTS_SUMMARY.md  BENCHMARKS.md  BUG_READONLY_GENERIC.md  CLAUDE.md  CONFORMANCE_IMPROVEMENT_HANDOFF.md  CONFORMANCE_SLICE4_FINDINGS.md  Cargo.toml  ENUM_ANALYSIS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  MODULE_VALIDATION_SUMMARY.md  OBJECT_ASSIGNABILITY_ANALYSIS.md  Oops.rej  PROJECT_COMPLETION_SUMMARY.md  PROJECT_DIRECTION.md  README.md  RULE_40_VERIFICATION_REPORT.md  SECTION_12_STATUS.md  SECTION_8_AGENT_8_STATUS.md  SESSION_SUMMARY.md  SLICE4_BUGS_FOUND.md  SLICE4_FINAL_REPORT.md  STABILITY_FIX_SUMMARY.md  STABILITY_INVESTIGATION.md  TESTING.md  TS1005_INVESTIGATION.md  TS2304_SUMMARY.md  TS2307_IMPLEMENTATION_SUMMARY.md  TS2307_VERIFICATION_REPORT.md  TS2322_ANALYSIS.md  (+163 more)
conformance-rust/: Cargo.toml  README.md
conformance-rust/src/: cache.rs  cli.rs  main.rs  runner.rs  test_parser.rs  tsc_results.rs  tsz_wrapper.rs
crates/tsz-binder/: Cargo.toml
crates/tsz-binder/src/: binder_stack_guard.rs  flow.rs  lib.rs  lib_loader.rs  module_resolution_debug.rs  scopes.rs  state.rs  state_binding.rs  state_binding_validation.rs  state_flow_helpers.rs  state_import_export.rs  state_lib_merge.rs  state_module_binding.rs  state_node_binding.rs  state_node_binding_names.rs  state_resolution.rs  state_tests.rs  symbols.rs
crates/tsz-binder/tests/: ambient_module_export_context_tests.rs  binding_validation.rs  file_local_globally_visible_tests.rs  flow_tests.rs  lib_loader.rs  lib_merge_external_module_tests.rs  lib_shadow_preservation_tests.rs  module_resolution_debug.rs  scopes_tests.rs  symbols_tests.rs
crates/tsz-checker/: Cargo.toml
crates/tsz-checker/src/: accessibility.rs  accessor_checker.rs  arena.rs  array_literals.rs  array_type.rs  assignability_checker.rs  assignment_checker.rs  call_checker.rs  callable_type.rs  check_circular_type_arguments.rs  class_checker.rs  class_checker_compat.rs  class_implements_checker.rs  class_inheritance.rs  class_type.rs  conditional_type.rs  constructor_checker.rs  context.rs  context_constructors.rs  context_def_mapping.rs  context_resolver.rs  control_flow.rs  control_flow_assignment.rs  control_flow_narrowing.rs  control_flow_type_guards.rs  declarations.rs  declarations_module.rs  declarations_module_helpers.rs  decorators.rs  destructuring.rs  dispatch.rs  dispatch_helpers.rs  dispatch_jsx.rs  dispatch_this.rs  dispatch_yield.rs  enum_checker.rs  error_handler.rs  error_reporter.rs  expr.rs  flow_analysis.rs  (+87 more)
crates/tsz-checker/tests/: abstract_constructor_argument_tests.rs  abstract_constructor_elaboration_tests.rs  abstract_method_overload_ts2416_tests.rs  abstract_parameter_property_impl_tests.rs  accessor_assignment_read_surface_tests.rs  accessor_pair_override_ts2416_tests.rs  ambient_default_namespace_export_dup_tests.rs  ambient_module_renamed_export_ts2460_tests.rs  ambient_module_value_export_tests.rs  any_propagation.rs  any_propagation_tests.rs  arbitrary_ext_decl_module_resolution_tests.rs  architecture_contract_tests.rs  array_declaration_display_summary_tests.rs  array_element_naked_inference_tests.rs  array_generic_shorthand_canonical_tests.rs  array_isarray_mutual_subtype_narrowing_tests.rs  array_subclass_inheritance_tests.rs  assertion_overlap_keyof_primitive_tests.rs  assertion_overlap_object_primitive_tests.rs  assertion_overlap_template_literal_tests.rs  async_imported_promise_tests.rs  async_iterable_type_param_tests.rs  async_nested_promise_return_tests.rs  async_return_promise_identity_tests.rs  async_return_widening_tests.rs  await_call_identifier_diagnostics_tests.rs  await_generic_non_promise_no_false_ts2339_tests.rs  await_thenable_this_context_tests.rs  awaited_generic_application_fold_tests.rs  bare_alias_display_tests.rs  bigint_target_ts2737_tests.rs  binding_pattern_inference_tests.rs  block_body_callback_literal_widening_tests.rs  call_resolution_regression_tests.rs  circular_accessor_annotation_tests.rs  cjs_direct_object_export_no_typeof_import_display_tests.rs  cjs_object_export_module_augmentation_merge_tests.rs  class_arrow_property_type_inference_tests.rs  class_expression_as_type_annotation_tests.rs  (+624 more)
crates/tsz-checker/tmp/: test_unused_locals.ts
crates/tsz-cli/: Cargo.toml  build.rs
crates/tsz-cli/src/: args.rs  build.rs  driver.rs  driver_check.rs  driver_check_utils.rs  driver_emit.rs  driver_emit_tests.rs  driver_resolution.rs  driver_resolution_tests.rs  driver_sources.rs  driver_tests.rs  fs.rs  help.rs  incremental.rs  incremental_tests.rs  lib.rs  locale.rs  locale_tests.rs  perf_json.rs  project_refs.rs  project_refs_tests.rs  reporter.rs  trace.rs  trace_tests.rs  tracing_config.rs  watch.rs
crates/tsz-cli/tests/: args_tests.rs  build_tests.rs  config_tests.rs  driver_tests.rs  driver_tests_ts2307.rs  fs_tests.rs  generic_call_bare_type_param_dts_emit_tests.rs  import_equals_alias_dts_emit_tests.rs  inferred_object_index_signature_dts_emit_tests.rs  lib_shadow_cli_tests.rs  parenthesized_type_dts_emit_tests.rs  recursive_const_arrow_dts_emit_tests.rs  recursive_defaulted_template_accumulator_tests.rs  reporter_tests.rs  reserved_word_emit_tests.rs  tsc_compat_tests.rs  watch_tests.rs
crates/tsz-common/: Cargo.toml  build.rs
crates/tsz-common/src/: checker_options.rs  comments.rs  common.rs  diagnostics.rs  file_extensions.rs  interner.rs  lib.rs  lib_capabilities.rs  limits.rs  numeric.rs  perf_counters.rs  position.rs  source_map.rs  span.rs
crates/tsz-core/: Cargo.toml
crates/tsz-core/src/: lib.rs  (+10 more)
crates/tsz-emitter/: Cargo.toml
crates/tsz-lowering/: Cargo.toml
crates/tsz-parser/: Cargo.toml
crates/tsz-scanner/: Cargo.toml
crates/tsz-solver/: Cargo.toml
crates/tsz-wasm/: Cargo.toml  build.rs
crates/tsz-website/: .eleventy.js  Cargo.toml  bench-snapshot.json  build.mjs  package.json  serve.mjs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parser.rs
(+7273 files in other folders)
