[workspace]
members = ["crates/*"]
exclude = ["crates/.target"]
resolver = "3"

[workspace.package]
version = "0.1.9"
edition = "2024"
repository = "https://github.com/mohsenazimi/tsz"
homepage = "https://github.com/mohsenazimi/tsz"
license = "Apache-2.0"
authors = ["Mohsen Azimi <mohsen@users.noreply.github.com>"]
keywords = ["typescript", "type-checker", "compiler", "language", "tsz"]
categories = ["development-tools", "compilers", "parser-implementations"]
readme = "README.md"

[workspace.dependencies]
# Internal workspace crates
tsz = { path = "crates/tsz-core", version = "0.1.9", package = "tsz-core" }
tsz-common = { path = "crates/tsz-common", version = "0.1.9" }
tsz-scanner = { path = "crates/tsz-scanner", version = "0.1.9" }
tsz-parser = { path = "crates/tsz-parser", version = "0.1.9" }
tsz-binder = { path = "crates/tsz-binder", version = "0.1.9" }
tsz-solver = { path = "crates/tsz-solver", version = "0.1.9" }
tsz-lowering = { path = "crates/tsz-lowering", version = "0.1.9" }
tsz-checker = { path = "crates/tsz-checker", version = "0.1.9" }
tsz-emitter = { path = "crates/tsz-emitter", version = "0.1.9" }
tsz-lsp = { path = "crates/tsz-lsp", version = "0.1.9" }
tsz-cli = { path = "crates/tsz-cli", version = "0.1.9" }
tsz-wasm = { path = "crates/tsz-wasm", version = "0.1.9" }

# External dependencies (shared versions)
anyhow = "1.0"
bitflags = "2.6"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
console_error_panic_hook = "0.1"
criterion = "0.5"
dashmap = "6.1"
ena = "0.14"
fixedbitset = "0.4"
globset = "0.4"
indexmap = "2.6"
memchr = "2.7"
notify = "6.1"
once_cell = "1.19"
rayon = "1.10"
regex = "1.11"
rustc-hash = "2.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
json5 = "0.4"
serde-wasm-bindgen = "0.6"
smallvec = "1.13"
tempfile = "3"
tracing = { version = "0.1", features = ["release_max_level_warn"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-tree = "0.4"
walkdir = "2.5"
wasm-bindgen = "0.2"
web-time = "1.1"

[workspace.lints.rust]
unsafe_code = "warn"
rust_2024_compatibility = { level = "warn", priority = -1 }

[workspace.lints.clippy]
# Correctness - these are errors
correctness = { level = "deny", priority = -1 }
# Style - useful warnings
style = { level = "deny", priority = -1 }
dbg_macro = "deny"
print_stderr = "deny"
empty_structs_with_brackets = "warn"
get_unwrap = "deny"
match_same_arms = "warn"
missing_const_for_fn = "warn"
doc_markdown = "warn"
uninlined_format_args = "warn"
redundant_clone = "warn"
# Performance
perf = { level = "deny", priority = -1 }
# Complexity
complexity = { level = "deny", priority = -1 }
# Allow some that may be too noisy for this codebase

[profile.release]
# Fast compilation with decent runtime performance (for testing)
lto = false           # No LTO = much faster compilation
codegen-units = 16    # Parallel codegen = faster compilation
strip = false         # Keep symbols for debugging

[profile.dist]
# Maximum optimization for production binary (use: cargo build --profile dist)
inherits = "release"
lto = "fat"           # Full link-time optimization for smaller, faster binary
codegen-units = 1     # Single codegen unit for better optimization
strip = "symbols"     # Strip debug symbols to reduce binary size

[profile.dist-fast]
# Fast build + good runtime: balance between compile time and performance
# Use for: CI testing, quick benchmarks, faster conformance runs
# Build time: ~20-30% faster than dist, Runtime: ~95% of dist performance
inherits = "release"
lto = "thin"          # Faster than fat LTO, still good optimization
codegen-units = 16    # Parallel build (like release), unlike dist's serial build
strip = "debuginfo"   # Keep symbols for debugging, strip debug info only

[profile.dev-fast]
inherits = "dev"
opt-level = 2
debug = true

[profile.bench]
lto = "thin"
