[package]
name = "tsz-binder"
description = "TypeScript name binder for the tsz compiler"
version.workspace = true
edition.workspace = true
autotests = false
repository.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
tsz-common = { workspace = true }
tsz-scanner = { workspace = true }
tsz-parser = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
smallvec = { workspace = true }

[[test]]
name = "symbols_tests"
path = "tests/symbols_tests.rs"

[[test]]
name = "flow_tests"
path = "tests/flow_tests.rs"

[[test]]
name = "scopes_tests"
path = "tests/scopes_tests.rs"

[[test]]
name = "lib_merge_external_module_tests"
path = "tests/lib_merge_external_module_tests.rs"

[lints]
workspace = true
