[package]
name = "tsz-checker"
description = "TypeScript type checker for the tsz compiler"
version.workspace = true
edition.workspace = true
autotests = false
repository.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []

[dependencies]
tsz-common = { workspace = true }
tsz-scanner = { workspace = true }
tsz-parser = { workspace = true }
tsz-binder = { workspace = true }
tsz-solver = { workspace = true }
tsz-lowering = { workspace = true }
rustc-hash = { workspace = true }
tracing = { workspace = true }
smallvec = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
globset = { workspace = true }
dashmap = { workspace = true }
stacker = "0.1.23"
web-time = { workspace = true }

[[test]]
name = "ts1238_tests"
path = "tests/ts1238_tests.rs"

[[test]]
name = "lazy_class_constructor_type_tests"
path = "tests/lazy_class_constructor_type_tests.rs"

[[test]]
name = "ts2725_tests"
path = "tests/ts2725_tests.rs"

[[test]]
name = "ts2300_tests"
path = "tests/ts2300_tests.rs"

[[test]]
name = "jsx_component_attribute_tests"
path = "tests/jsx_component_attribute_tests.rs"

[[test]]
name = "type_alias_namespace_merge_tests"
path = "tests/type_alias_namespace_merge_tests.rs"

[[test]]
name = "ts2540_readonly_tests"
path = "tests/ts2540_readonly_tests.rs"

[[test]]
name = "control_flow_type_guard_tests"
path = "tests/control_flow_type_guard_tests.rs"

[[test]]
name = "ts2322_tests"
path = "tests/ts2322_tests.rs"

[[test]]
name = "spread_rest_tests"
path = "tests/spread_rest_tests.rs"

[[test]]
name = "ts1210_class_arguments_tests"
path = "tests/ts1210_class_arguments_tests.rs"

[[test]]
name = "jsdoc_implements_tests"
path = "tests/jsdoc_implements_tests.rs"

[[test]]
name = "js_constructor_property_tests"
path = "tests/js_constructor_property_tests.rs"

[[test]]
name = "jsdoc_type_tag_tests"
path = "tests/jsdoc_type_tag_tests.rs"

[[test]]
name = "ts1203_node_esm_tests"
path = "tests/ts1203_node_esm_tests.rs"

[[test]]
name = "ts1254_ambient_const_tests"
path = "tests/ts1254_ambient_const_tests.rs"

[[test]]
name = "conformance_issues"
path = "tests/conformance_issues.rs"

[[test]]
name = "binding_pattern_inference_tests"
path = "tests/binding_pattern_inference_tests.rs"

[[test]]
name = "ts2353_tests"
path = "tests/ts2353_tests.rs"

[[test]]
name = "jsdoc_type_expression_tests"
path = "tests/jsdoc_type_expression_tests.rs"

[[test]]
name = "static_member_access_types"
path = "tests/static_member_access_types.rs"

[[test]]
name = "contextual_tuple_tests"
path = "tests/contextual_tuple_tests.rs"

[[test]]
name = "co_contra_inference_tests"
path = "tests/co_contra_inference_tests.rs"

[[test]]
name = "commonjs_constructor_diagnostics_tests"
path = "tests/commonjs_constructor_diagnostics_tests.rs"

[[test]]
name = "type_arg_count_mismatch_tests"
path = "tests/type_arg_count_mismatch_tests.rs"

[[test]]
name = "commonjs_module_export_alias_tests"
path = "tests/commonjs_module_export_alias_tests.rs"

[[test]]
name = "commonjs_require_value_tests"
path = "tests/commonjs_require_value_tests.rs"

[[test]]
name = "js_export_surface_tests"
path = "tests/js_export_surface_tests.rs"

[[test]]
name = "speculation_rollback_tests"
path = "tests/speculation_rollback_tests.rs"

[[test]]
name = "flow_observation_boundary_tests"
path = "tests/flow_observation_boundary_tests.rs"

[[test]]
name = "name_resolution_boundary_tests"
path = "tests/name_resolution_boundary_tests.rs"

[[test]]
name = "lib_resolution_identity_tests"
path = "tests/lib_resolution_identity_tests.rs"

[[test]]
name = "stable_identity_helpers_tests"
path = "tests/stable_identity_helpers_tests.rs"

[[test]]
name = "project_env_tests"
path = "tests/project_env_tests.rs"

[[test]]
name = "generic_call_inference_tests"
path = "tests/generic_call_inference_tests.rs"

[[test]]
name = "call_resolution_regression_tests"
path = "tests/call_resolution_regression_tests.rs"

[[test]]
name = "enum_recursion_tests"
path = "tests/enum_recursion_tests.rs"

[[test]]
name = "enum_nominality_tests"
path = "tests/enum_nominality_tests.rs"

[[test]]
name = "enum_member_cache_tests"
path = "tests/enum_member_cache_tests.rs"

[[test]]
name = "enum_merge_tests"
path = "tests/enum_merge_tests.rs"

[[test]]
name = "ts2450_const_enum_tests"
path = "tests/ts2450_const_enum_tests.rs"

[[test]]
name = "ts2403_js_cross_file_tests"
path = "tests/ts2403_js_cross_file_tests.rs"

[lints]
workspace = true
