[package]
name = "tsz-checker"
description = "TypeScript type checker for the tsz compiler"
version.workspace = true
edition.workspace = true
autotests = false
repository.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []

[dependencies]
tsz-common = { workspace = true }
tsz-scanner = { workspace = true }
tsz-parser = { workspace = true }
tsz-binder = { workspace = true }
tsz-solver = { workspace = true }
tsz-lowering = { workspace = true }
rustc-hash = { workspace = true }
tracing = { workspace = true }
smallvec = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
globset = { workspace = true }
dashmap = { workspace = true }
stacker = "0.1.23"
web-time = { workspace = true }

[[test]]
name = "generator_annotation_mismatch_display_tests"
path = "tests/generator_annotation_mismatch_display_tests.rs"

[[test]]
name = "generator_return_type_widening_tests"
path = "tests/generator_return_type_widening_tests.rs"

[[test]]
name = "async_return_widening_tests"
path = "tests/async_return_widening_tests.rs"

[[test]]
name = "ts2567_augmentation_enum_cross_arena_decl_tests"
path = "tests/ts2567_augmentation_enum_cross_arena_decl_tests.rs"

[[test]]
name = "await_generic_non_promise_no_false_ts2339_tests"
path = "tests/await_generic_non_promise_no_false_ts2339_tests.rs"

[[test]]
name = "ts2449_parameter_decorator_no_tdz_tests"
path = "tests/ts2449_parameter_decorator_no_tdz_tests.rs"

[[test]]
name = "ts1238_generic_decorator_tests"
path = "tests/ts1238_generic_decorator_tests.rs"

[[test]]
name = "ts1210_arguments_param_in_class_tests"
path = "tests/ts1210_arguments_param_in_class_tests.rs"

[[test]]
name = "ts2307_per_site_dedup_tests"
path = "tests/ts2307_per_site_dedup_tests.rs"

[[test]]
name = "ts2769_anchor_disagreeing_overloads_tests"
path = "tests/ts2769_anchor_disagreeing_overloads_tests.rs"

[[test]]
name = "ts1362_false_positive_tests"
path = "tests/ts1362_false_positive_tests.rs"

[[test]]
name = "ts1361_chain_attribution_tests"
path = "tests/ts1361_chain_attribution_tests.rs"

[[test]]
name = "ts1238_tests"
path = "tests/ts1238_tests.rs"

[[test]]
name = "ts6133_unused_type_params_tests"
path = "tests/ts6133_unused_type_params_tests.rs"

[[test]]
name = "private_brands"
path = "tests/private_brands.rs"

[[test]]
name = "lazy_class_constructor_type_tests"
path = "tests/lazy_class_constructor_type_tests.rs"

[[test]]
name = "ts2725_tests"
path = "tests/ts2725_tests.rs"

[[test]]
name = "ts2300_tests"
path = "tests/ts2300_tests.rs"

[[test]]
name = "jsx_component_attribute_tests"
path = "tests/jsx_component_attribute_tests.rs"

[[test]]
name = "type_alias_namespace_merge_tests"
path = "tests/type_alias_namespace_merge_tests.rs"

[[test]]
name = "type_alias_typeof_circular_tests"
path = "tests/type_alias_typeof_circular_tests.rs"

[[test]]
name = "ts2303_tests"
path = "tests/ts2303_tests.rs"

[[test]]
name = "namespace_qualified_diagnostic_tests"
path = "tests/namespace_qualified_diagnostic_tests.rs"

[[test]]
name = "ts2540_readonly_tests"
path = "tests/ts2540_readonly_tests.rs"

[[test]]
name = "tuple_index_access_tests"
path = "tests/tuple_index_access_tests.rs"

[[test]]
name = "control_flow_type_guard_tests"
path = "tests/control_flow_type_guard_tests.rs"

[[test]]
name = "ts2322_tests"
path = "tests/ts2322_tests.rs"

[[test]]
name = "ts2322_property_decl_annotation_tests"
path = "tests/ts2322_property_decl_annotation_tests.rs"

[[test]]
name = "ts2322_literal_source_display_tests"
path = "tests/ts2322_literal_source_display_tests.rs"

[[test]]
name = "ts2322_pair_disambiguation_widening_tests"
path = "tests/ts2322_pair_disambiguation_widening_tests.rs"

[[test]]
name = "spread_rest_tests"
path = "tests/spread_rest_tests.rs"

[[test]]
name = "ts1210_class_arguments_tests"
path = "tests/ts1210_class_arguments_tests.rs"

[[test]]
name = "jsdoc_implements_tests"
path = "tests/jsdoc_implements_tests.rs"

[[test]]
name = "js_constructor_property_tests"
path = "tests/js_constructor_property_tests.rs"

[[test]]
name = "jsdoc_type_tag_tests"
path = "tests/jsdoc_type_tag_tests.rs"

[[test]]
name = "ts1203_node_esm_tests"
path = "tests/ts1203_node_esm_tests.rs"

[[test]]
name = "ts1254_ambient_const_tests"
path = "tests/ts1254_ambient_const_tests.rs"

[[test]]
name = "binding_pattern_inference_tests"
path = "tests/binding_pattern_inference_tests.rs"

[[test]]
name = "ts2353_tests"
path = "tests/ts2353_tests.rs"

[[test]]
name = "ts2683_tests"
path = "tests/ts2683_tests.rs"

[[test]]
name = "jsdoc_type_expression_tests"
path = "tests/jsdoc_type_expression_tests.rs"

[[test]]
name = "js_jsdoc_diagnostics_tests"
path = "tests/js_jsdoc_diagnostics_tests.rs"

[[test]]
name = "static_member_access_types"
path = "tests/static_member_access_types.rs"

[[test]]
name = "contextual_tuple_tests"
path = "tests/contextual_tuple_tests.rs"

[[test]]
name = "co_contra_inference_tests"
path = "tests/co_contra_inference_tests.rs"

[[test]]
name = "commonjs_constructor_diagnostics_tests"
path = "tests/commonjs_constructor_diagnostics_tests.rs"

[[test]]
name = "type_arg_count_mismatch_tests"
path = "tests/type_arg_count_mismatch_tests.rs"

[[test]]
name = "commonjs_module_export_alias_tests"
path = "tests/commonjs_module_export_alias_tests.rs"

[[test]]
name = "conformance_issues"
path = "tests/conformance_issues.rs"

[[test]]
name = "export_equals_display_order_tests"
path = "tests/export_equals_display_order_tests.rs"

[[test]]
name = "commonjs_require_value_tests"
path = "tests/commonjs_require_value_tests.rs"

[[test]]
name = "js_export_surface_tests"
path = "tests/js_export_surface_tests.rs"

[[test]]
name = "js_grammar_span_tests"
path = "tests/js_grammar_span_tests.rs"

[[test]]
name = "speculation_rollback_tests"
path = "tests/speculation_rollback_tests.rs"

[[test]]
name = "flow_observation_boundary_tests"
path = "tests/flow_observation_boundary_tests.rs"

[[test]]
name = "name_resolution_boundary_tests"
path = "tests/name_resolution_boundary_tests.rs"

[[test]]
name = "lib_resolution_identity_tests"
path = "tests/lib_resolution_identity_tests.rs"

[[test]]
name = "stable_identity_helpers_tests"
path = "tests/stable_identity_helpers_tests.rs"

[[test]]
name = "project_env_tests"
path = "tests/project_env_tests.rs"

[[test]]
name = "generic_call_inference_tests"
path = "tests/generic_call_inference_tests.rs"

[[test]]
name = "call_resolution_regression_tests"
path = "tests/call_resolution_regression_tests.rs"

[[test]]
name = "signature_assignability_regression_tests"
path = "tests/signature_assignability_regression_tests.rs"

[[test]]
name = "enum_recursion_tests"
path = "tests/enum_recursion_tests.rs"

[[test]]
name = "enum_nominality_tests"
path = "tests/enum_nominality_tests.rs"

[[test]]
name = "enum_member_cache_tests"
path = "tests/enum_member_cache_tests.rs"

[[test]]
name = "enum_merge_tests"
path = "tests/enum_merge_tests.rs"

[[test]]
name = "ts2450_const_enum_tests"
path = "tests/ts2450_const_enum_tests.rs"

[[test]]
name = "ts2403_js_cross_file_tests"
path = "tests/ts2403_js_cross_file_tests.rs"

[[test]]
name = "js_container_merge_ts2339_tests"
path = "tests/js_container_merge_ts2339_tests.rs"

[[test]]
name = "js_class_constructor_merge_tests"
path = "tests/js_class_constructor_merge_tests.rs"

[[test]]
name = "ts2344_typeof_merged_tests"
path = "tests/ts2344_typeof_merged_tests.rs"

[[test]]
name = "ts2344_class_constructor_constraint"
path = "tests/ts2344_class_constructor_constraint.rs"

[[test]]
name = "ts2344_accessor_constraint"
path = "tests/ts2344_accessor_constraint.rs"

[[test]]
name = "ts2344_infer_conditional_constraint"
path = "tests/ts2344_infer_conditional_constraint.rs"

[[test]]
name = "ts2344_self_referential_interface_constraint"
path = "tests/ts2344_self_referential_interface_constraint.rs"

[[test]]
name = "ts2344_literal_type_message"
path = "tests/ts2344_literal_type_message.rs"

[[test]]
name = "promise_constructor_capability_tests"
path = "tests/promise_constructor_capability_tests.rs"

[[test]]
name = "missing_global_type_diagnostics_tests"
path = "tests/missing_global_type_diagnostics_tests.rs"

[[test]]
name = "import_attributes_resolution_mode_tests"
path = "tests/import_attributes_resolution_mode_tests.rs"

[[test]]
name = "contextual_typing_tests"
path = "tests/contextual_typing_tests.rs"

[[test]]
name = "infer_extends_constraint_substitution_tests"
path = "tests/infer_extends_constraint_substitution_tests.rs"

[[test]]
name = "fresh_intersection_display_tests"
path = "tests/fresh_intersection_display_tests.rs"

[[test]]
name = "intersection_signatures"
path = "tests/intersection_signatures.rs"

[[test]]
name = "ts2364_import_meta_assignment_tests"
path = "tests/ts2364_import_meta_assignment_tests.rs"

[[test]]
name = "cross_module_nested_interface_tests"
path = "tests/cross_module_nested_interface_tests.rs"

[[test]]
name = "jsdoc_augments_empty_tests"
path = "tests/jsdoc_augments_empty_tests.rs"

[[test]]
name = "jsdoc_extends_constraint_tests"
path = "tests/jsdoc_extends_constraint_tests.rs"

[[test]]
name = "override_intersection_display_tests"
path = "tests/override_intersection_display_tests.rs"

[[test]]
name = "ts2451_cross_file_augmentation_tests"
path = "tests/ts2451_cross_file_augmentation_tests.rs"

[[test]]
name = "ts2451_type_only_namespace_merge_tests"
path = "tests/ts2451_type_only_namespace_merge_tests.rs"

[lints]
workspace = true
